--- a/src/sample/result.fxml
+++ b/src/sample/result.fxml
@@ -10,7 +10,7 @@
    <children>
       <VBox layoutX="156.0" layoutY="100.0" prefHeight="200.0" prefWidth="100.0">
          <children>
-            <Text fx:id="textID" strokeType="OUTSIDE" strokeWidth="0.0" text="PLAYER WINS!">
+            <Text fx:id="textID" strokeType="OUTSIDE" strokeWidth="0.0" text="">
                <font>
                   <Font name="Times New Roman Bold Italic" size="41.0" />
                </font>
